# agentbench

./: .gitignore  .gitmodules  README.md  pyproject.toml
agentbench/: agent_runner.py  cli.py  run_task.py  suite_runner.py
agentbench/agents/: __init__.py  base.py  llm_v0.py  loop.py  observation.py  scripted.py  types.py
agentbench/agents/prompts/: __init__.py  system_v1.py
agentbench/agents/tests/: test_interrupt.py  test_llm_v0.py  test_loop.py  test_observation.py  test_prompts.py  test_stop_conditions.py  test_types.py
agentbench/llm/: client.py  config.py  messages.py  openrouter.py
agentbench/llm/tests/: test_messages.py  test_openrouter.py
agentbench/reporting/: __init__.py  cli.py  inputs.py  models.py  render.py  summary.py  templates.py
agentbench/reporting/tests/: test_determinism.py  test_inputs.py  test_render.py  test_summary.py
agentbench/sandbox/: __init__.py  docker_sandbox.py  filesystem.py  models.py  persistent_sandbox.py
agentbench/sandbox/tests/: sandbox_test.py  test_docker_sandbox.py  test_sandbox.py
agentbench/schemas/: README.md  attempt_record.py  events.py
agentbench/schemas/tests/: test_attempt_record.py  test_events.py
agentbench/scoring/: README.md  taxonomy.py
agentbench/scoring/tests/: test_taxonomy.py
agentbench/tasks/: models.py  validation.py  validator.py
agentbench/tasks/tests/: test_loader.py  test_models.py  test_validation.py  test_validator.py
agentbench/tests/: __init__.py  test_attempt_records.py  test_benchmark_models.py  test_cli.py  test_import_swebench.py  test_persistent_sandbox.py  test_report_cli.py  test_run_task.py  test_stop_mapping.py  test_suite_runner.py
agentbench/tools/: README.md  __init__.py  builtins.py  contract.py  patch_models.py  patching.py
agentbench/tools/schemas/: events.py
agentbench/tools/tests/: test_builtins.py  test_contract.py  test_patching.py  test_schema_events.py
agentbench/util/: attempt.py  commands.py  events.py  git.py  jsonl.py  process.py
agentbench/util/tests/: test_attempt.py  test_commands.py  test_events.py  test_git.py  test_jsonl.py
docker/py-runner/: Dockerfile
plan/weeks/: week-1.md  week-2.md
scripts/: benchmark_models.py  check.sh  demo_scripted_agent.sh  doctor.sh  find_and_benchmark.py  import_swebench.py  models.txt  openrouter_call.py  sanity_check_agent.sh
tasks/custom-dev/toy_fail_pytest/: task.yaml
tasks/custom-dev/toy_one_liner/: task.yaml
tasks/custom-dev/toy_pass_pytest/: task.yaml
tasks/custom-dev/toy_setup_fail/: task.yaml
tasks/custom-dev/toy_timeout/: task.yaml
tasks/swe-bench-lite-10/mwaskom__seaborn-2848/: task.yaml
tasks/swe-bench-lite-10/mwaskom__seaborn-3010/: task.yaml
tasks/swe-bench-lite-10/mwaskom__seaborn-3190/: task.yaml
(+20 files in other folders)
