[project]
name = "agentbench-monorepo"
version = "0.1.0"
description = "Monorepo for AgentBench, RL Training, and Inference Server"
requires-python = ">=3.11"
readme = "README.md"

# Root package has no direct dependencies - they're in workspace packages
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Virtual root package - minimal stub
packages = ["agentbench_monorepo"]

[tool.uv]
# Define the workspace with all packages
workspace = { members = ["packages/*"] }

[tool.uv.sources]
# Workspace package references
shared = { workspace = true }
agentbench = { workspace = true }
rl-training = { workspace = true }
inference-server = { workspace = true }

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["packages"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
